<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_country"
        android:icon="@drawable/global"
        android:title="@string/title_country" />

    <item
        android:id="@+id/navigation_poster"
        android:icon="@drawable/myposter"
        android:title="@string/title_poster" />

    <item
        android:id="@+id/navigation_web"
        android:icon="@drawable/newss"
        android:title="@string/title_web"/>

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/information"
        android:title="@string/title_info"/>

</menu>
