<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:padding="10dp"
    tools:context=".ui.info.InfoFragment">

    <RelativeLayout
        android:id="@+id/info_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_log"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/transparan"
            android:text="@string/logout"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:fontFamily="@font/poller_one"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/judull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_lay">
        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/LabelFS"
            android:textSize="20sp"
            android:text="@string/judul1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kontak1"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judull">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/phone"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                style="@style/LabelFS"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone2"
                style="@style/TotalFS"
                android:textSize="20sp"
                android:textColor="@color/bg_sc5"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/kontak2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kontak1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp">
            <ImageView
                android:id="@+id/totalCases"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kota3"
                style="@style/LabelFS"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0813 8837 6955"
                style="@style/TotalFS"
                android:textSize="20sp"
                android:textColor="@color/bg_sc5"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/kontak3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kontak2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kota1"
                style="@style/LabelFS"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0811 2093 306"
                style="@style/TotalFS"
                android:textSize="20sp"
                android:textColor="@color/bg_sc5"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/kontak4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kontak3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jawa Tengah"
                style="@style/LabelFS"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="024 3580713"
                style="@style/TotalFS"
                android:textSize="20sp"
                android:textColor="@color/bg_sc5"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kontak5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kontak4">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jawa Timur"
                style="@style/LabelFS"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone3"
                style="@style/TotalFS"
                android:textSize="20sp"
                android:textColor="@color/bg_sc5"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>